Fixed spacing between bullets or list number and the list item.

--- a/style.css
+++ b/style.css
@@ -35,9 +35,10 @@ p {
 }
 
 li {
-  width: 350px;
+  width: 215px;
+  text-align: left;
   height: auto;
-  margin: auto; 
+  margin: auto;; 
 }
 
 img {
